переделан под stream метод findAllProductByLocation